--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -30,10 +30,12 @@ seeds:
       _fivetran_synced: timestamp
     event_data:
       +column_types:
+        _fivetran_user_id: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
         transactional_data: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
         created_at: timestamp
     event_extension_data:
       +column_types:
+        _fivetran_user_id: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
         payload: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
 
 dispatch:
