--- a/models/stg_iterable.yml
+++ b/models/stg_iterable.yml
@@ -135,8 +135,6 @@ models:
         description: User agent associated with the event
       - name: user_agent_device
         description: The device of the user agent
-      - name: _fivetran_id
-        description: A Fivetran-created unique identifier derived from hashing campaign_id, created_at, and event_name. 
       - name: _fivetran_user_id
         description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
   
@@ -335,7 +333,7 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - iterable_user_id
+            - _fivetran_user_id
             - updated_at
     columns:
       - name: iterable_user_id
@@ -363,29 +361,35 @@ models:
       - name: _fivetran_user_id
         description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
   
-  - name: stg_iterable__user_unsubscribed_channel_history
+  - name: stg_iterable__user_unsubscribed_channel
     description: Table containing the history of channels from which a user has unsubscribed.
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - _fivetran_user_id
+            - channel_id
     columns:
       - name: channel_id
         description: Reference to the channel from which the user unsubscribed
         tests:
           - not_null
-      - name: email
-        description: Unique identifier of the user
-      - name: updated_at
-        description: Last update timestamp as epoch time in milliseconds
+      - name: _fivetran_user_id
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
 
-  - name: stg_iterable__user_unsub_message_type_history
+  - name: stg_iterable__user_unsub_message_type
     description: Table containing the history of message types from which a user has unsubscribed. "Unsubscribed" is shortened to "unsub" for postgres compatibility.
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - _fivetran_user_id
+            - message_type_id
     columns:
       - name: message_type_id
         description: Reference to the message type from which the user unsubscribed
         tests:
           - not_null
-      - name: email
-        description: Unique identifier of the user
-      - name: updated_at
-        description: Last update timestamp as epoch time in milliseconds
+      - name: _fivetran_user_id
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
 
   - name: stg_iterable__user_device
     description: Table capturing the devices associated with in-app and push notifications to a user.
