add does table exist macro for unsub channel history too

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,7 @@ vars:
     template_history: "{{ source('iterable', 'template_history') }}"
     user_history: "{{ source('iterable', 'user_history') }}"
     user_device: "{{ source('iterable', 'user_device') }}"
+    user_unsubscribed_channel: "{{ source('iterable', 'user_unsubscribed_channel') }}"
     user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
     user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
     user_unsubscribed_message_type: "{{ source('iterable', 'user_unsubscribed_message_type') }}"
