--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -19,6 +19,8 @@ vars:
     iterable_template_history_identifier: "template_history_data"
     iterable_user_history_identifier: "user_history_data"
     iterable_user_device_identifier: "user_device_data"
+    iterable_user_unsubscribed_channel_identifier: "user_unsubscribed_channel_data"
+    iterable_user_unsubscribed_message_type_identifier: "user_unsubscribed_message_type_data"
     iterable_user_unsubscribed_channel_history_identifier: "user_unsubscribed_channel_history_data"
     iterable_user_unsubscribed_message_type_history_identifier: "user_unsubscribed_message_type_history_data"
     is_old_spelling: false
