--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,6 +26,8 @@ vars:
     user_device: "{{ source('iterable', 'user_device') }}"
     user_unsubscribed_channel: "{{ source('iterable', 'user_unsubscribed_channel') }}"
     user_unsubscribed_message_type: "{{ source('iterable', 'user_unsubscribed_message_type') }}"
+    user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
+    user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
 
     iterable_event_pass_through_columns: []
     iterable_user_pass_through_columns: []
