--- a/models/stg_iterable.yml
+++ b/models/stg_iterable.yml
@@ -375,9 +375,9 @@ models:
       - name: _fivetran_user_id
         description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
       - name: email
-        description: Unique identifier of the user
+        description: Unique identifier of the user. Exists if using the history version of the table.
       - name: updated_at
-        description: Last update timestamp as epoch time in milliseconds        
+        description: Last update timestamp as epoch time in milliseconds. Exists if using the history version of the table.        
 
   - name: stg_iterable__user_unsub_message_type
     description: Table containing the message types from which a user has unsubscribed. "Unsubscribed" is shortened to "unsub" for postgres compatibility.
@@ -393,6 +393,6 @@ models:
       - name: _fivetran_user_id
         description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
       - name: email
-        description: Unique identifier of the user
+        description: Unique identifier of the user. Exists if using the history version of the table.
       - name: updated_at
-        description: Last update timestamp as epoch time in milliseconds
+        description: Last update timestamp as epoch time in milliseconds. Exists if using the history version of the table.
