--- a/models/stg_iterable.yml
+++ b/models/stg_iterable.yml
@@ -136,7 +136,7 @@ models:
       - name: user_agent_device
         description: The device of the user agent
       - name: _fivetran_user_id
-        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type. This exists for users of the new schema starting Aug 2023. In the old schema, the unique identifier is email.
       - name: unique_user_key
         description: The unique identifier of the user. With the new schema (Aug 2023), it is the _fivetran_user_id. This is a hash of user_id and/or email, depending on project type. If using the old schema, it is email.
   
@@ -261,7 +261,7 @@ models:
       - name: web_push_message 
         description: The message or notification sent to web users as part of the event.
       - name: _fivetran_user_id
-        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type. This exists for users of the new schema starting Aug 2023. In the old schema, the unique identifier is email.
 
   - name: stg_iterable__list
     description: Table containing users and the lists the users are associated with.
@@ -345,7 +345,7 @@ models:
       - name: email
         description: The user's email. User identifier, for email-based projects. Previously was the unique identifier for user records, for Iterable customers before August 2023. 
       - name: user_id
-        description:  User identifier, for userID-based projects,
+        description:  User identifier, for userID-based projects.
       - name: first_name
         description: First name of the user
       - name: last_name
@@ -363,7 +363,7 @@ models:
       - name: iterable_user_id
         description: Another user identifier, for userID-based projects
       - name: _fivetran_user_id
-        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type. This exists for users of the new schema starting Aug 2023. In the old schema, the unique identifier is email.
   
   - name: stg_iterable__user_unsubscribed_channel
     description: Table containing the history of channels from which a user has unsubscribed.
@@ -377,11 +377,11 @@ models:
         tests:
           - unique
       - name: _fivetran_user_id
-        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type. This exists for users of the new schema starting Aug 2023. In the old schema, the unique identifier is email.
       - name: email
-        description: Unique identifier of the user. Exists if using the history version of the table.
+        description: The user's email. User identifier, for email-based projects. Previously was the unique identifier for user records, for Iterable customers before August 2023.  Exists if using the history version of the table.
       - name: updated_at
-        description: Last update timestamp as epoch time in milliseconds. Exists if using the history version of the table.        
+        description: Last update timestamp as epoch time in milliseconds. Exists if using the history version of the table.
       - name: unique_user_key
         description: The unique identifier of the user. With the new schema (Aug 2023), it is the _fivetran_user_id. This is a hash of user_id and/or email, depending on project type. If using the old schema, it is email.
 
@@ -397,9 +397,9 @@ models:
         tests:
           - unique
       - name: _fivetran_user_id
-        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type.
+        description: A Fivetran-created unique identifier for users, derived from hashing user_id and/or email, depending on project type. This exists for users of the new schema starting Aug 2023. In the old schema, the unique identifier is email.
       - name: email
-        description: Unique identifier of the user. Exists if using the history version of the table.
+        description: The user's email. User identifier, for email-based projects. Previously was the unique identifier for user records, for Iterable customers before August 2023.  Exists if using the history version of the table.
       - name: updated_at
         description: Last update timestamp as epoch time in milliseconds. Exists if using the history version of the table.
       - name: unique_user_key
