--- a/models/src_iterable.yml
+++ b/models/src_iterable.yml
@@ -109,7 +109,7 @@ sources:
           - name: created_at
             description: Creation timestamp as epoch time in milliseconds
           - name: email
-            description: Reference to the unique user the event was applied to
+            description: The user's email. User identifier, for email-based projects. Previously was the unique identifier for user records, for Iterable customers before August 2023.  Exists if using the history version of the table.
           - name: additional_properties
             description: json object containing addition event properties
           - name: event_name
